[gd_scene load_steps=14 format=3 uid="uid://5gbqaf1gqn30"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Cortical_Properties/WindowCorticalProperties.gd" id="1_1jbcd"]
[ext_resource type="Theme" uid="uid://cjrivk0518jvv" path="res://Feagi-Godot-Interface/UI/Resources/theme/main_theme.tres" id="1_dxtt6"]
[ext_resource type="PackedScene" uid="uid://cya0u5xbn7bro" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Collapsable/VerticalCollapsible.tscn" id="2_wrcar"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/ContainerShrinker.gd" id="3_thls4"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://Feagi-Godot-Interface/UI/Windows/Elements/TitleBar/TitleBar.tscn" id="4_pwsxt"]
[ext_resource type="PackedScene" uid="uid://506fv2gitw7k" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Cortical_Properties/Parts/CorticalPropertiesCorticalParameters.tscn" id="5_2tr5n"]
[ext_resource type="PackedScene" uid="uid://rvvhpq3y0on7" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Cortical_Properties/Parts/CorticalPropertiesNeuronFiringParameters.tscn" id="6_k1df6"]
[ext_resource type="PackedScene" uid="uid://dm68mg7exp1ca" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Cortical_Properties/Parts/CorticalPropertiesMemoryParameters.tscn" id="7_l4w3m"]
[ext_resource type="PackedScene" uid="uid://de7cguh4dnbxg" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Cortical_Properties/Parts/CorticalPropertiesPostSynapticPotentialParameters.tscn" id="8_a5fj2"]
[ext_resource type="PackedScene" uid="uid://ckkgl10utu0i8" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Cortical_Properties/Parts/CorticalPropertiesCorticalAreaMonitoring.tscn" id="9_li0sx"]
[ext_resource type="PackedScene" uid="uid://bsjtfu2i0eyou" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Cortical_Properties/Parts/CorticalPropertiesConnections.tscn" id="10_1oexy"]
[ext_resource type="PackedScene" uid="uid://ckej7m86vhcdj" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Cortical_Properties/Parts/CorticalPropertiesDangerZone.tscn" id="11_ekmr0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8nka"]
bg_color = Color(0.0627451, 0.101961, 0.156863, 1)

[node name="WindowCorticalProperties" type="Panel"]
offset_top = 50.0
offset_bottom = 50.0
theme = ExtResource("1_dxtt6")
script = ExtResource("1_1jbcd")

[node name="Main_Body" type="BoxContainer" parent="."]
layout_mode = 0
offset_right = 335.0
offset_bottom = 207.0
vertical = true
script = ExtResource("3_thls4")

[node name="Cortical" parent="Main_Body" instance=ExtResource("2_wrcar")]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
prefab_to_spawn = ExtResource("5_2tr5n")
section_text = &"Summary"

[node name="Neuron_Firing" parent="Main_Body" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("6_k1df6")
section_text = &"Neuron Firing Parameters"

[node name="Memory" parent="Main_Body" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("7_l4w3m")
section_text = &"Memory"

[node name="Post_Synaptic_Potential" parent="Main_Body" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("8_a5fj2")
section_text = &"Post Synaptic Potential parameters"

[node name="Coritcal_Monitoring" parent="Main_Body" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("9_li0sx")
section_text = &"Cortical Area Monitoring"

[node name="Connections" parent="Main_Body" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("10_1oexy")
section_text = &"Connections"

[node name="DangerZone" parent="Main_Body" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("11_ekmr0")
section_text = &"Danger Zone"

[node name="TitleBar" parent="." instance=ExtResource("4_pwsxt")]
layout_mode = 0
offset_top = -40.0
offset_right = 136.0
offset_bottom = 0.0
title = "Cortical Area Details"

[connection signal="resized" from="Main_Body/Cortical" to="Main_Body" method="recalculate_size"]
[connection signal="resized" from="Main_Body/Neuron_Firing" to="Main_Body" method="recalculate_size"]
[connection signal="resized" from="Main_Body/Memory" to="Main_Body" method="recalculate_size"]
[connection signal="resized" from="Main_Body/Post_Synaptic_Potential" to="Main_Body" method="recalculate_size"]
[connection signal="resized" from="Main_Body/Coritcal_Monitoring" to="Main_Body" method="recalculate_size"]
[connection signal="resized" from="Main_Body/Connections" to="Main_Body" method="recalculate_size"]
[connection signal="resized" from="Main_Body/DangerZone" to="Main_Body" method="recalculate_size"]
